--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
-    "@nx/next": "^17.2.8",
+    "@nx/next": "18.0.4",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
     "@tanstack/react-query": "^5.15.0",
@@ -54,29 +54,29 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@next/bundle-analyzer": "^14.0.4",
-    "@nx/eslint": "17.1.2",
-    "@nx/eslint-plugin": "17.1.2",
-    "@nx/jest": "17.1.2",
-    "@nx/js": "17.1.2",
-    "@nx/react": "17.1.2",
-    "@nx/workspace": "17.1.2",
-    "@swc-node/register": "~1.6.7",
+    "@nx/eslint": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/jest": "18.0.4",
+    "@nx/js": "18.0.4",
+    "@nx/react": "18.0.4",
+    "@nx/workspace": "18.0.4",
+    "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/leaflet": "^1.9.8",
-    "@types/node": "18.14.2",
+    "@types/node": "18.19.17",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
     "@types/react-google-recaptcha": "^2.1.8",
     "@types/three": "^0.157.2",
     "@types/uuid": "^9.0.4",
-    "@typescript-eslint/eslint-plugin": "6.11.0",
-    "@typescript-eslint/parser": "6.11.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "clsx": "^1.2.1",
-    "eslint": "8.46.0",
+    "eslint": "8.48.0",
     "eslint-config-next": "^14.0.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -86,14 +86,14 @@
     "firebase-tools": "^12.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "17.1.2",
-    "nx-cloud": "16.5.2",
+    "nx": "18.0.4",
+    "nx-cloud": "18.0.0",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
     "tailwindcss": "3.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.3.3"
   }
 }
