--- a/firebase.json
+++ b/firebase.json
@@ -25,7 +25,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
+            "value": "public, max-age=300, s-maxage=3600, stale-while-revalidate=7200"
           }
         ]
       },
@@ -34,7 +34,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
+            "value": "public, max-age=300, s-maxage=3600, stale-while-revalidate=7200"
           }
         ]
       },
@@ -44,7 +44,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
+            "value": "public, max-age=300, s-maxage=3600, stale-while-revalidate=7200"
           }
         ]
       },
@@ -53,7 +53,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
+            "value": "public, max-age=300, s-maxage=3600, stale-while-revalidate=7200"
           }
         ]
       },
@@ -67,7 +67,7 @@
         ]
       },
       {
-        "source": "/_next/images/(brand.webp|brand.png)",
+        "source": "/_next/image/**",
         "headers": [
           {
             "key": "Cache-Control",
@@ -81,15 +81,6 @@
           {
             "key": "Cache-Control",
             "value": "public, max-age=3600, s-maxage=604800, stale-while-revalidate=604800, immutable"
-          }
-        ]
-      },
-      {
-        "source": "/images/**",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=86400, s-maxage=604800, stale-while-revalidate=604800, immutable"
           }
         ]
       }
