--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-error-boundary": "^4.0.12",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.1",
     "react-leaflet": "^4.2.1",
     "react-schemaorg": "^2.0.0",
