--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "isbot": "^5.1.0",
     "leaflet": "^1.9.4",
     "next": "^14.1.0",
+    "pdfkit": "^0.14.0",
     "plaiceholder": "^3.0.0",
     "posthog-js": "^1.108.3",
     "react": "^18.2.0",
@@ -67,6 +68,7 @@
     "@types/jest": "^29.4.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "18.19.17",
+    "@types/pdfkit": "^0.13.4",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
     "@types/react-google-recaptcha": "^2.1.8",
