--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -16,6 +16,7 @@
     "fast-xml-parser": "^4.3.5",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.7.0",
+    "pdfkit": "^0.14.0",
     "sharp": "^0.32.6",
     "stripe": "^14.14.0",
     "tsc-alias": "^1.8.8",
