--- a/firebase.json
+++ b/firebase.json
@@ -121,6 +121,7 @@
     {
       "source": "apps/functions",
       "codebase": "default",
+      "runtime": "nodejs18",
       "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log"]
     }
   ],
