--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "nx run-many --target=dev --projects=storefront --parallel",
     "build": "nx run-many --target=build --projects=storefront --parallel"
   },
+  "engines": {
+    "node": "18"
+  },
   "private": true,
   "dependencies": {
     "@getbrevo/brevo": "^2.0.0-beta.4",
