--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -111,6 +111,11 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - name: Setup Firebase
+        uses: w9jds/setup-firebase@v1
+        with:
+          firebase_token: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
       - name: 'Setup function .env'
         run: |
           cat <<EOF > apps/functions/.env
@@ -127,10 +132,3 @@ jobs:
       - name: 'Build functions'
         run: 'yarn build'
         working-directory: 'apps/functions'
-
-      - name: Deploy
-        uses: w9jds/firebase-action@v12.9.0
-        with:
-          args: deploy --only functions --force
-        env:
-          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
