--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build-app:
+    if: "!contains(github.event.head_commit.message, '[skip ci:storefront]')"
     runs-on: ubuntu-latest
     steps:
       - uses: 'actions/checkout@v3'
