--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@nx/workspace": "18.0.4",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/leaflet": "^1.9.8",
@@ -78,6 +79,7 @@
     "@types/sanitize-html": "^2.11.0",
     "@types/three": "^0.157.2",
     "@types/uuid": "^9.0.4",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "autoprefixer": "10.4.13",
@@ -101,6 +103,7 @@
     "tailwindcss": "3.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "yargs": "^17.7.2"
   }
 }
