--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "clsx": "^1.2.1",
+    "csvtojson": "^2.0.10",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.2",
     "eslint-config-prettier": "9.0.0",
