--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -54,11 +54,12 @@ jobs:
             docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASS $DOCKER_REGISTRY
             docker-compose pull storefront
             docker-compose up -d storefront
-          env:
-            DOCKER_REGISTRY_USER: ${{ github.actor }}
-            DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
-            DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
-            STOREFRONT_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/${{ github.repository }}-storefront:latest
+          envs: DOCKER_REGISTRY_USER,DOCKER_REGISTRY_PASS,DOCKER_REGISTRY,STOREFRONT_DOCKER_IMAGE
+        env:
+          DOCKER_REGISTRY_USER: ${{ github.actor }}
+          DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
+          STOREFRONT_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/${{ github.repository }}-storefront:latest
 
   deploy-rules:
     runs-on: ubuntu-latest
