--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -20,13 +20,17 @@ jobs:
           ${{ vars.BUILD_ENV_FILE }}
           EOF
 
+      - name: 'Setup REGISTRY_BASE_URI env var'
+        run: |
+          TMP_REPO_VAR="${{ github.repository }}" echo "REGISTRY_BASE_URI=${TMP_REPO_VAR@L}" >> "${GITHUB_ENV}"
+
       - name: 'Push Docker image'
         uses: 'docker/build-push-action@v2'
         with:
           context: './dist/apps/storefront'
           file: './apps/storefront/Dockerfile'
           push: true
-          tags: ${{ vars.DOCKER_REGISTRY }}/${{ github.repository }}-storefront:latest
+          tags: '${{ vars.DOCKER_REGISTRY }}/${REGISTRY_BASE_URI}-storefront:latest'
 
   deploy-storefront: # ssh and docker compose up
     runs-on: ubuntu-latest
@@ -42,6 +46,10 @@ jobs:
           password: ${{ secrets.STOREFRONT_SSH_PASSWORD }}
           source: './docker-compose.yml'
           target: ${{ vars.STOREFRONT_DEPLOY_PATH }}/docker-compose.yml
+
+      - name: 'Setup REGISTRY_BASE_URI env var'
+        run: |
+          TMP_REPO_VAR="${{ github.repository }}" echo "REGISTRY_BASE_URI=${TMP_REPO_VAR@L}" >> "${GITHUB_ENV}"
 
       - name: 'Deploy Storefront'
         uses: 'appleboy/ssh-action@v1.0.3'
@@ -59,7 +67,7 @@ jobs:
           DOCKER_REGISTRY_USER: ${{ github.actor }}
           DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
           DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
-          STOREFRONT_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/${{ github.repository }}-storefront:latest
+          STOREFRONT_DOCKER_IMAGE: '${{ vars.DOCKER_REGISTRY }}/${REGISTRY_BASE_URI}-storefront:latest'
 
   deploy-rules:
     runs-on: ubuntu-latest
