--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  push-storefront-image:
+  build-push-storefront-image:
     if: "!contains(github.event.head_commit.message, '[skip ci:storefront]')"
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +23,7 @@ jobs:
       - name: 'Push Docker image'
         uses: 'docker/build-push-action@v2'
         with:
-          context: './dist/apps/storefront'
+          context: '.'
           file: './apps/storefront/Dockerfile'
           push: true
           tags: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront:latest
