--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -20,6 +20,13 @@ jobs:
           ${{ vars.BUILD_ENV_FILE }}
           EOF
 
+      - name: 'Login to docker registry'
+        run: docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASS $DOCKER_REGISTRY
+        env:
+          DOCKER_REGISTRY_USER: ${{ github.actor }}
+          DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
+
       - name: 'Push Docker image'
         uses: 'docker/build-push-action@v2'
         with:
