--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
 
+permissions:
+  packages: write
+
 jobs:
   build-push-storefront-image:
     if: "!contains(github.event.head_commit.message, '[skip ci:storefront]')"
@@ -14,18 +17,18 @@ jobs:
       - name: 'Setup buildx'
         uses: 'docker/setup-buildx-action@v2'
 
+      - name: 'Login to docker registry'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{ vars.DOCKER_REGISTRY }}
+
       - name: 'Setup .env'
         run: |
           cat <<EOF > apps/storefront/.env
           ${{ vars.BUILD_ENV_FILE }}
           EOF
-
-      - name: 'Login to docker registry'
-        run: docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASS $DOCKER_REGISTRY
-        env:
-          DOCKER_REGISTRY_USER: ${{ github.actor }}
-          DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
-          DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
 
       - name: 'Push Docker image'
         uses: 'docker/build-push-action@v2'
