--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -36,10 +36,10 @@ jobs:
           file: './apps/storefront/Dockerfile'
           push: true
           tags: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront:latest
-          cache-from: type=registry,ref=${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront:buildcache
-          cache-to: type=registry,ref=${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront:buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  deploy-storefront: # ssh and docker compose up
+  deploy-storefront:
     runs-on: ubuntu-latest
     needs: build-push-storefront-image
     steps:
