--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,10 @@ services:
     networks:
       - vps-proxy
 
-  storefront: ${STOREFRONT_DOCKER_IMAGE}
+  storefront:
+    image: ${STOREFRONT_DOCKER_IMAGE}
     expose:
-      - 80
+      - 3000
     restart: always
     env_file:
       - .env.storefront
